frontend/test/should_fail/setmax.grg
rule r
{
	if { set<Node>{}.max() != null; }
	
	modify {
	}
}
